--- a/array_opearation/src/components/body.css
+++ b/array_opearation/src/components/body.css
@@ -10,12 +10,14 @@ li {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  
 }
 ul {
   width: 25vw;
   margin: auto;
   padding: 50px 50px 50px 50px;
   box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+  background-color: rgb(105, 96, 96);
 }
 span {
   margin-right: 30px;
